--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -2,7 +2,7 @@ schema_version = "1.0.0"
 
 id = "two_point_perspective"
 version = "0.0.1"
-name = "Two Point Perspective"
+name = "Two-Point Perspective"
 tagline = "Replaces the active camera with a copy of it that uses two point perspective"
 maintainer = "Athina Syntychaki <athina.syntychaki@gmail.com>"
 type = "add-on"
@@ -15,7 +15,7 @@ license = [
   "SPDX:GPL-3.0-or-later",
 ]
 copyright = [
-"2024 Athina Syntychaki"
+"2025 Athina Syntychaki"
 ]
 
 
